Adicionei mais um pouco de CRUD

--- a/Projeto/src/main/resources/application.properties
+++ b/Projeto/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.url=jdbc:mysql://localhost:3306/zupajuda
+spring.datasource.username=zupajuda
+spring.datasource.password=
