--- a/Projeto/src/main/resources/application.properties
+++ b/Projeto/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## config do banco de dados.
-spring.datasource.url=jdbc:mysql://localhost:3306/doacoes_db
-spring.datasource.username=zupChat
-spring.datasource.password=12345
+spring.datasource.url=jdbc:mysql://localhost:3306/zupajuda
+spring.datasource.username=zupajuda
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
