--- a/Projeto/src/main/resources/application.properties
+++ b/Projeto/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 ## config do banco de dados.
-spring.datasource.url=jdbc:mysql://localhost:3306/zupajuda
-spring.datasource.username=zupajuda
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/doacoes_db
+spring.datasource.username=zupChat
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 ## Comportamento do hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.show-sql=true
-jwt.secret=catalisa
+jwt.secret=javainuse
+spring.security.user.name=admin
+spring.security.user.password=admin
 
 
